Issue #27 - Color Contrast

--- a/manager/templates/a11y-theme/css/login.css
+++ b/manager/templates/a11y-theme/css/login.css
@@ -1,245 +1,1 @@
-/* Colors 
-======================================================*/
-/* unused */
-/* needs much more adaption, should be used as text color for elements with $colorSplash background */
-/* a blueish dark gray */
-/* default theme $colorSplash */
-/* Core colors */
-/* Brand colors */
-/* Vars 
-======================================================*/
-/* line 81, ../sass/_colors-and-vars.scss */
-body *:focus, input:focus, p:focus, checkbox:focus {
-  outline: 2px solid #63d967 !important;
-}
-
-/*======================================================*/
-/* Diagram */
-/* A */
-/* B - Text & More Below */
-/* C - Text & More Below */
-/* D */
-/* E - Borders & More Below */
-/* F 
-	the tab active/text/bottom border is $tabBg	& $colorSplash
-	Also uses:
-	$tabInactiveText 
-	$tabHoverText
-*/
-/* G */
-/* H */
-/*======================================================*/
-/* structures */
-/* borders */
-/* Grids */
-/* backgrounds */
-/* Context menus */
-/* ComboBox dropdown menus */
-/* Tree menus  */
-/* Top Nav */
-/* Top navigation colors */
-/* Sub navigation colors */
-/* Shadows */
-/* C - Left Bar Tabs */
-/* text colors and font stacks */
-/* Form field colors */
-/* Windows */
-/* Buttons */
-/* Responsive breakpoints */
-/* line 7, ../sass/login.scss */
-html {
-  color: #111;
-  /* http://meyerweb.com/eric/thoughts/2006/02/08/unitless-line-heights/ */
-  font-family: "Lucida Grande", Helvetica, Arial, sans-serif !important;
-  /* IE ignores this and renders Arial better */
-  font-family: Arial, Tahoma, Helvetica, sans-serif;
-  font-size: 100.01%;
-  height: 100%;
-  /* avoids obscure font-size bug */
-  line-height: 1.5;
-  width: 100%;
-}
-
-/* line 20, ../sass/login.scss */
-body {
-  background: #f2f2f2;
-  font-size: 75%;
-  /* 12px 62.5% for 10px*/
-  height: 100%;
-  width: 100%;
-}
-
-/* line 28, ../sass/login.scss */
-.warning {
-  color: #821517;
-  font-weight: bold;
-}
-
-/* line 33, ../sass/login.scss */
-.success {
-  color: #090;
-  font-weight: bold;
-}
-
-/* line 38, ../sass/login.scss */
-#container {
-  margin: 70px auto 0;
-  width: 460px;
-}
-
-/* line 43, ../sass/login.scss */
-#modx-login-logo {
-  margin: 0 0 12px 24px;
-}
-/* line 45, ../sass/login.scss */
-#modx-login-logo img {
-  width: 180px;
-}
-
-/* line 50, ../sass/login.scss */
-#modx-panel-login-div {
-  border: 0;
-  background: #fff;
-  border-radius: 0;
-  box-shadow: 0 0 7px 1px #d9d9d9;
-  padding: 26px;
-}
-
-/* line 58, ../sass/login.scss */
-img.loginCaptcha {
-  border: 1px solid #039;
-  height: 60px;
-  width: 148px;
-}
-
-/* line 64, ../sass/login.scss */
-.loginLicense {
-  color: #555;
-  font-size: 90%;
-  margin: 1em auto;
-  padding-left: 20px;
-  width: 460px;
-}
-
-/* line 72, ../sass/login.scss */
-h2 {
-  color: #4e4e4e;
-  font-weight: bold;
-}
-
-/* line 77, ../sass/login.scss */
-#modx-login-btn {
-  float: right;
-  font-size: 12px;
-}
-/* line 84, ../sass/login.scss */
-#modx-login-btn:active {
-  margin: 3px 2px 1px;
-}
-
-/* line 89, ../sass/login.scss */
-.modx-forgot-login {
-  float: left;
-}
-
-/* line 92, ../sass/login.scss */
-#modx-forgot-login-form {
-  margin-top: 24px;
-}
-/* line 95, ../sass/login.scss */
-#modx-forgot-login-form button {
-  margin-top: 24px;
-  font-size: 12px;
-}
-
-/* line 101, ../sass/login.scss */
-a {
-  color: #bbb;
-  text-decoration: none;
-}
-/* line 105, ../sass/login.scss */
-a :hover {
-  text-decoration: underline;
-}
-
-/* line 110, ../sass/login.scss */
-#modx-login-email {
-  width: 200px;
-}
-
-/* line 114, ../sass/login.scss */
-.login-form-item {
-  margin: 0;
-}
-/* line 117, ../sass/login.scss */
-.login-form-item label {
-  cursor: pointer;
-  font-size: 120%;
-  color: #4e4e4e;
-  margin: 0 0 3px 3px;
-  display: block;
-}
-
-/* line 126, ../sass/login.scss */
-.login-form-item-first {
-  margin: 0 0 17px;
-}
-
-/* line 132, ../sass/login.scss */
-.login-form-element .x-form-text {
-  padding: 8px;
-  line-height: 32px;
-  width: 390px;
-  background: #f2f2f2;
-  border-color: #e9e9e9;
-}
-
-/* line 141, ../sass/login.scss */
-.login-cb-row {
-  padding: 24px 0 10px 0;
-}
-
-/* line 145, ../sass/login.scss */
-.x-form-check-wrap {
-  float: left;
-}
-/* line 148, ../sass/login.scss */
-.x-form-check-wrap .x-form-cb-label {
-  margin: 11px 0 0;
-  color: #888;
-}
-/* line 153, ../sass/login.scss */
-.x-form-check-wrap.modx-login-rm-cb {
-  float: left;
-}
-
-/* line 158, ../sass/login.scss */
-.login-cb-col {
-  float: left;
-  width: 50%;
-}
-
-/* line 163, ../sass/login.scss */
-.modx-login-fl-link {
-  cursor: pointer;
-  height: auto !important;
-  line-height: 18px;
-  margin: 10px 0 0 2px;
-  white-space: nowrap;
-}
-
-/* line 171, ../sass/login.scss */
-#modx-login-language-select-div {
-  bottom: 0;
-  color: #888;
-  left: 0;
-  padding: 4px;
-  position: absolute;
-}
-
-/* line 178, ../sass/login.scss */
-#modx-login-language-select {
-  background: #eee;
-  border: 1px solid #aaa;
-  position: relative;
-}
+body *:focus,input:focus,p:focus,checkbox:focus{outline:2px solid #63d967 !important}html{color:#111;font-family:"Lucida Grande",Helvetica,Arial,sans-serif !important;font-family:Arial,Tahoma,Helvetica,sans-serif;font-size:100.01%;height:100%;line-height:1.5;width:100%}body{background:#f2f2f2;font-size:75%;height:100%;width:100%}.warning{color:#821517;font-weight:bold}.success{color:#090;font-weight:bold}#container{margin:70px auto 0;width:460px}#modx-login-logo{margin:0 0 12px 24px}#modx-login-logo img{width:180px}#modx-panel-login-div{border:0;background:#fff;border-radius:0;box-shadow:0 0 7px 1px #d9d9d9;padding:26px}img.loginCaptcha{border:1px solid #039;height:60px;width:148px}.loginLicense{color:#555;font-size:90%;margin:1em auto;padding-left:20px;width:460px}h2{color:#4e4e4e;font-weight:bold}#modx-login-btn{float:right;font-size:12px}#modx-login-btn:active{margin:3px 2px 1px}.modx-forgot-login{float:left}#modx-forgot-login-form{margin-top:24px}#modx-forgot-login-form button{margin-top:24px;font-size:12px}a{color:#bbb;text-decoration:none}a :hover{text-decoration:underline}#modx-login-email{width:200px}.login-form-item{margin:0}.login-form-item label{cursor:pointer;font-size:120%;color:#4e4e4e;margin:0 0 3px 3px;display:block}.login-form-item-first{margin:0 0 17px}.login-form-element .x-form-text{padding:8px;line-height:32px;width:390px;background:#f2f2f2;border-color:#e9e9e9}.login-cb-row{padding:24px 0 10px 0}.x-form-check-wrap{float:left}.x-form-check-wrap .x-form-cb-label{margin:11px 0 0;color:#888}.x-form-check-wrap.modx-login-rm-cb{float:left}.login-cb-col{float:left;width:50%}.modx-login-fl-link{cursor:pointer;height:auto !important;line-height:18px;margin:10px 0 0 2px;white-space:nowrap}#modx-login-language-select-div{bottom:0;color:#888;left:0;padding:4px;position:absolute}#modx-login-language-select{background:#eee;border:1px solid #aaa;position:relative}/*# sourceMappingURL=../css/login.map */
